# rustBackend

./: .gitignore  Cargo.toml  README.md
deploy/: local.yml
migrations/: 1_create.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  user.rs
src/user/: extractor.rs  handler.rs  mail.rs  model.rs  service.rs
tests/: quick.rs  user.rs
