[package]
name = "rust_backend"
version = "0.0.1"
description = "try api rest backend in rust"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
argon2 = "0.5.3"
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["multipart", "macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
moka = { version = "0.12.8", features = ["sync"] }
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "cookies", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "chrono", "uuid"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.6.1", features = ["v7", "serde"] }

[dev-dependencies]
httpc-test = "0.1.10"